topcat: replace deprecated Class.newInstance() invocations
Deprecated since Java 9.